<resources>
    <string name="app_name">MedSkin</string>
    <string name="google_maps_key">AIzaSyCifPRSXYzjMsQJwSSsKunNGnGIQSQ0obc</string>
    <string name="title_analitycs">Prediagnosa</string>
    <string name="title_articles">Artikel</string>
    <string name="title_data">List Penyakit Kulit</string>
    <string name="title_info">Informasi Aplikasi</string>
    <string name="title_detail">Hasil Prediagnosa</string>
    <string name="title_detail_article">Detail Artikel"</string>
    <string name="title_detail_data">Detail Penyakit"</string>
    <string name="take_image">Ambil Gambar</string>
    <string name="upload_image">Pilih Gambar</string>

    <string name="test">test</string>
    <string name="result">Maps</string>
    <string name="process">Oke</string>
    <string name="see_more_result">Lihat Hasil Lebih Lanjut</string>
    <string name="noteNonDanger">Untuk mendapatkan informasi lebih lanjut , disarankan konsultasi ke dokter di rumah sakit terdekat </string>
    <string name="noteDanger">Silakan konsultasi ke dokter untuk penanganan lebih lanjut</string>
    <string name="hospital_nearby">Berikut lokasi rumah sakit terdekat</string>
    <string name="benign">Tidak Berbahaya</string>
    <!--    <string name="malignant">Berbahaya</string>-->
    <string name="hasil_prediksi_anda_berpotensi">Hasil prediksi anda berpotensi:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feature_under_development">under development</string>
    <string name="gejala">Gejala</string>
    <string name="penyebab">Penyebab</string>
    <string name="cara_penanggulangan">Cara Penanggulangan</string>
    <string name="tips">Tips</string>
    <string name="tipsContent">Pastikan gambar penyakit kulit yang diambil atau dipilih memiliki jarak yang cukup dekat dengan kamera.</string>

</resources>